Fix character image spacing

--- a/src/styles/GameCard.css
+++ b/src/styles/GameCard.css
@@ -49,5 +49,5 @@
 
 .card-character-image {
   max-height: 25px;
-  margin-left: 10px;
+  margin-left: 25px;
 }
